<resources>
    <string name="app_name">Hocam</string>

    <!-- UserOperation Page -->
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="change_to_register">Hey yeni bir üyelik açmak ister misin ?</string>
    <string name="change_to_login">Hey giriş mi yapmak istiyorsun ?</string>

    <!-- Subject Activity -->
    <string name="coming_soon">Yakında bu özellik gelecek</string>

    <!-- Quiz Activity -->
    <string name="quiz_back_button_error_message">Testi bitirmeden çıkamazsınız</string>
    <string name="quiz_next_button_error_message">Devam etmeden önce bir şık seçiniz</string>
    <string name="quiz_wrong_answer_error_message">Yanlış cevabı seçtiniz</string>
    <string name="answer_a">A</string>
    <string name="answer_b">B</string>
    <string name="answer_c">C</string>
    <string name="answer_d">D</string>
    <string name="answer_e">E</string>
    <string name="total_point_key">Skorun :</string>
    <string name="finish_quiz">Geri Dön</string>

    <!-- Admin Page -->
    <string name="add_quiz">Quiz Ekle</string>
    <string name="add_topic">Konu Ekle</string>
    <string name="add_question">Soru Ekle</string>
    <string name="quiz_name">Quiz İsmi</string>
    <string name="add_subject">Konu Ekle</string>

    <!-- Admin Quiz -->
    <string name="topic_header">Konu :</string>

    <!-- Home Page -->
    <string name="question_button">Sorular</string>
    <string name="lecture_button">Konular</string>
    <string name="sendquestion_button">Soru Gönder</string>


    <!-- Bottom Navigation -->
    <string name="quiz_page_bottom_menu">Quiz</string>
    <string name="subject_bottom_menu">Konu Anlatım</string>
    <string name="ask_question_bottom_menu">Soru Sor</string>

    <!-- Send QuestionRequest -->
    <string name="upload_button">Soruyu Gönder</string>
    <string name="upload_text">Sorunu Yükle</string>

    <!-- Send QuestionRequest -->
    <string name="solved_questions">Çözdüğüm Sınavlar</string>
    <string name="answer_questions">Soruları Cevapla</string>

    <!-- Failed Question -->
    <string name="question_failed">Yanlış cevap verdiniz</string>



</resources>